--- a/_source/2015-07-27-a-post-to-test-knitr-to-jekyll.Rmd
+++ b/_source/2015-07-27-a-post-to-test-knitr-to-jekyll.Rmd
@@ -1,10 +1,16 @@
 ---
-layout: post
 title: "A Post to Test Knitr to Jekyll"
 author: "Auke Hoekstra"
 date: "30 juli 2015"
-categories: [jekyll, rstats]
-tags: [knitr, servr, httpuv, websocket]
+output: html_document
+layout: post
+tags:
+- markdown
+- knitr
+- Jekyll
+- GitHub
+thumb: ../pics/math-fonts.png
+categories: Workflow
 ---
 
 **Remaining problems and observations**
@@ -13,10 +19,8 @@ tags: [knitr, servr, httpuv, websocket]
   * This behavior is also observed in the orinigal site from yihui.
 * Preview in R Studio does not work
   * it works fine in yihui's site so the problem should be soved when analysing the differences between the two sites
-* Latex code like $$( x^2 + y^2 = 1 )$$ or $$\frac{d}{dx}\left( \int_{0}^{x} f(u)\,du\right)=f(x)$$ renders fine with Knit HTML but not with servr::jekyll(). This behavior is seen in both evflex and yihui. Could be that this has something to do with kramdown instead of rmarkdown being the rendering engine.
-* SVG does not render to PDF yet.
-* We have to run jekyll locally. This means resubmitting edits can only be done from a machine having all this installed and this makes collaboration harder. It would be better if we had jekyll running on Github. But of course this does not understand R Markdown which is a bit of a problem.
-
+* Figures (last part of this page) do not display nicely.
+* Latex code like $$( x^2 + y^2 = 1 )$$ now displays in HTML but will not render to PDF.
 
 **Test 6: succes! (sort of)**
 
@@ -111,9 +115,7 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
   * Lower level list
 * And back
 
-# LateX textcontent (3 formula's)
-
-$/( x^2 + y^2 = 1 )$
+# LateX content
 
 $$( x^2 + y^2 = 1 )$$
 
@@ -148,3 +150,4 @@ Just to test inline R expressions[^2] in **knitr**, we know the first element in
 par(mar = c(4, 4, .1, .1))
 plot(cars, pch = 19, col = 'red')  # a scatterplot
 ```
+
